--- a/src/features/jogos/styles/JogoCard.module.css
+++ b/src/features/jogos/styles/JogoCard.module.css
@@ -1,9 +1,9 @@
 .jogoCard {
   width: 270px;
-  height: 21rem;
-  background-color: #f9f9f9;
+  height: 22rem;
+  background-color: #ececec;
   display: grid;
-  grid-template-rows: 3rem 8rem 1.5rem auto 2.5rem;
+  grid-template-rows: 3rem 8rem 1.5rem 5rem 2.5rem;
   padding: 12px;
   gap: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
