--- a/src/features/auth/styles/Login.module.css
+++ b/src/features/auth/styles/Login.module.css
@@ -1,13 +1,12 @@
 .container {
   display: flex;
-  height: 100vh;
   justify-content: center;
   align-items: center;
-  background: #f1f1f1;
+  flex: 1;
 }
 
 .form {
-  background: white;
+  background: #ececec;
   padding: 24px;
   border-radius: 8px;
   width: 300px;
